# automaton-auditor-swarm

./: README.md  pyproject.toml  run_phase5.sh  step1_1_results.json  test_tracing.py
audit/: doc_analysis.json  report_onpeer_generated.md  report_onself_generated.md
audit/langsmith_logs/: trace_run_01.json
rubric/: week2_rubric.json
scripts/: verify_phase1.py
src/: graph.py  report_generator.py  state.py
src/nodes/: chief_justice.py  context_builder.py  detectives.py  fact_supremacy.py  judges.py  security_override.py  synthesis_models.py  variance_detector.py
src/tools/: ast_tools.py  doc_tools.py  repo_tools.py  vision_tools.py
tests/: create_test_pdf.py  test_ast_tools.py  test_doc.py  test_persona_differences.py  test_repo.py  test_rubric.py  test_state_phase2.py
